refactor(order): simplify service control flow